# mt-g4py

./: CMakeLists.txt  README.md
mt-g4py/: CMakeLists.txt  CMakeLists.txt~  README.md
mt-g4py/TestEm0/: CMakeLists.txt  CMakeLists.txt~
mt-g4py/exampleB1/: CMakeLists.txt  CMakeLists.txt~  History  exampleB1.out
mt-g4py/exampleB1/module/: B1DetectorConstruction.cc  B1Run.cc  B1RunAction.cc  B1Runner.cc
mt-g4py/water_phantom/: CMakeLists.txt  CMakeLists.txt~
site-modules/: CMakeLists.txt
site-modules/geometries/ExN01geom/: CMakeLists.txt
site-modules/geometries/ExN03geom/: CMakeLists.txt
site-modules/geometries/Qgeom/: CMakeLists.txt
site-modules/geometries/ezgeom/: CMakeLists.txt
site-modules/materials/NISTmaterials/: CMakeLists.txt
site-modules/materials/Qmaterials/: CMakeLists.txt~
site-modules/physics_lists/EMSTDpl/: CMakeLists.txt
site-modules/python/: CMakeLists.txt
source/digits_hits/: CMakeLists.txt
source/event/: CMakeLists.txt  CMakeLists.txt~
source/gdml/: CMakeLists.txt
source/geometry/: CMakeLists.txt  pyG4LogicalVolume.cc
source/global/: CMakeLists.txt  pyglobals.cc
source/graphics_reps/: CMakeLists.txt
source/intercoms/: CMakeLists.txt
source/interface/: CMakeLists.txt
source/materials/: CMakeLists.txt
source/particles/: CMakeLists.txt
source/physics_lists/: CMakeLists.txt
source/processes/: CMakeLists.txt
source/python3/: CMakeLists.txt  CMakeLists.txt~
source/run/: CMakeLists.txt  CMakeLists.txt~
source/track/: CMakeLists.txt
source/tracking/: CMakeLists.txt
source/visualization/: CMakeLists.txt
(+8 files in other folders)
